--- a/includes/lib/tcpdf/composer.json
+++ b/includes/lib/tcpdf/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "tecnick.com/tcpdf",
-	"version": "6.0.084",
+	"name": "tecnickcom/tcpdf",
+	"version": "6.2.13",
 	"homepage": "http://www.tcpdf.org/",
 	"type": "library",
-	"description": "TCPDF is a PHP class for generating PDF documents.",
+	"description": "TCPDF is a PHP class for generating PDF documents and barcodes.",
 	"keywords": ["PDF","tcpdf","PDFD32000-2008","qrcode","datamatrix","pdf417","barcodes"],
 	"license": "LGPLv3",
 	"authors": [
@@ -18,7 +18,6 @@
 	},
 	"autoload": {
 		"classmap": [
-		"fonts",
 		"config",
 		"include",
 		"tcpdf.php",
